tests/snapshots/examples_fixtures/type_system__failing__144_guarded_wildcard_only_non_exhaustive_targeted.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

A guarded wildcard `_ if ...` does not guarantee exhaustiveness because the guard may fail.

  examples/type_system/failing/144_guarded_wildcard_only_non_exhaustive_targeted.flx:4:14
  |
4 |     let _y = match x {
  |              ^^^^^^^^^
5 |         _ if x > 0 -> 1
  | ^^^^^^^^^^^^^^^^^^^^^^^
6 |     }
  | ^^^^^

Hint:
  Add an unguarded `_ -> ...` fallback arm after guarded arms.
== stdout ==
<not executed>
